--- a/views/partials/body/input.ejs
+++ b/views/partials/body/input.ejs
@@ -22,12 +22,12 @@
 
 
 <form id="standardform1" name="standardform1" method="POST" action="/input1">
-<h5>센서 세팅:
+<h5>세팅:
 <input type ="button"  id="ruleid1" name="ruleid1" value="적용" onclick="stsubmit1()"/>
 
 <i class=" fa fa-long-arrow-right"></i>
 <script>
-var socket = io.connect("http://localhost:3000");
+var socket = io.connect("http://52.78.82.199:80");
 var test1 =false;
   function stsubmit1() {
       socket.emit('std1');
@@ -62,20 +62,21 @@ var test1 =false;
   <div>
     <h5>
       <form id="ruleform1" name="ruleform1" method="POST" action="/input1">
-      기준치 :
+      민감도 :
       <input type ="text"  id="range1" name="range1" value=""placeholder="<%=data_1.range001%>
       "/>
       <button id="std1">적용 </button>
     </div>
     </h5>
   <script>
-  var socket = io.connect("http://localhost:3000");
+  var socket = io.connect("http://52.78.82.199:80");
     //var dao = "<%=data_1.range001%>"
   socket.on('email1',function () {
       socket.emit('standardData');
 	socket.disconnect();
   })
   $('#std1').click(function () {
+   
       ruleform1.submit();
   })
 
@@ -91,11 +92,11 @@ var test1 =false;
     <h5><b>(2)번 감지기</b></h5>
 
     <form id="standardform2" name="standardform2" method="POST" action="/input2">
-    <h5>센서 세팅:
+    <h5>세팅:
     <input type ="button"  id="ruleid2" name="ruleid2" value="적용" onclick="stsubmit2()"/>
     <i class=" fa fa-long-arrow-right"></i>
     <script>
-    var socket = io.connect("http://localhost:3000");
+    var socket = io.connect("http://52.78.82.199:80");
     var test2 =false;
     function stsubmit2() {
       socket.emit('std2');
@@ -127,14 +128,14 @@ var test1 =false;
       <div>
         <h5>
           <form id="ruleform2" name="ruleform2" method="POST" action="/input2">
-          기준치 :
+          민감도 :
           <input type ="text"  id="range2" name="range2" value="" placeholder="<%=data_2.range002%>
           "/>
           <button id="std2">적용 </button>
         </div>
         </h5>
         <script>
-        var socket = io.connect("http://localhost:3000");
+        var socket = io.connect("http://52.78.82.199:80");
           //var dao = "<%=data_1.range001%>"
           socket.on('email2',function () {
               socket.emit('standardData');
@@ -155,11 +156,11 @@ var test1 =false;
       <h5><b>(3)번 감지기</b></h5>
 
       <form id="standardform3" name="standardform3" method="POST" action="/input3">
-      <h5>센서 세팅:
+      <h5>세팅:
       <input type ="button" id="ruleid3" name="ruleid3" value="적용" onclick="stsubmit3()"/>
       <i class=" fa fa-long-arrow-right"></i>
       <script>
-      var socket = io.connect("http://localhost:3000");
+      var socket = io.connect("http://52.78.82.199:80");
       var test3=false;
       function stsubmit3() {
         socket.emit('std3');
@@ -191,14 +192,14 @@ var test1 =false;
         <div>
           <h5>
             <form id="ruleform3" name="ruleform3" method="POST" action="/input3">
-            기준치 :
+            민감도 :
             <input type ="text"  id="range3" name="range3" value="" placeholder="<%=data_3.range003%>
             "/>
             <button id="std3">적용 </button>
           </div>
           </h5>
           <script>
-          var socket = io.connect("http://localhost:3000");
+          var socket = io.connect("http://52.78.82.199:80");
             //var dao = "<%=data_1.range001%>"
             socket.on('email3',function () {
                 socket.emit('standardData');
@@ -220,11 +221,11 @@ var test1 =false;
       <h5><b>(4)번 감지기</b></h5>
 
       <form id="standardform4" name="standardform4" method="POST" action="/input4">
-      <h5>센서 세팅:
+      <h5>세팅:
       <input type ="button"  id="ruleid4" name="ruleid4" value="적용" onclick="stsubmit4()"/>
       <i class=" fa fa-long-arrow-right"></i>
       <script>
-      var socket = io.connect("http://localhost:3000");
+      var socket = io.connect("http://52.78.82.199:80");
       var test4 =false;
       function stsubmit4() {
         socket.emit('std4');
@@ -256,14 +257,14 @@ var test1 =false;
         <div>
           <h5>
             <form id="ruleform4" name="ruleform4" method="POST" action="/input4">
-            기준치 :
+            민감도 :
             <input type ="text"  id="range4" name="range4" value=""placeholder="<%=data_4.range004%>
             "/>
             <button id="std4">적용 </button>
           </div>
           </h5>
           <script>
-          var socket = io.connect("http://localhost:3000");
+          var socket = io.connect("http://52.78.82.199:80");
             //var dao = "<%=data_1.range001%>"
             socket.on('email4',function () {
                 socket.emit('standaradData');
@@ -284,11 +285,11 @@ var test1 =false;
         <h5><b>(5)번 감지기</b></h5>
 
         <form id="standardform5" name="standardform5" method="POST" action="/input5">
-        <h5>센서 세팅:
+        <h5>세팅:
         <input type ="button"  id="ruleid5" name="ruleid5" value="적용" onclick="stsubmit5()"/>
         <i class=" fa fa-long-arrow-right"></i>
         <script>
-        var socket = io.connect("http://localhost:3000");
+        var socket = io.connect("http://52.78.82.199:80");
         var test5 =false;
         function stsubmit5() {
           socket.emit('std5');
@@ -320,14 +321,14 @@ var test1 =false;
           <div>
             <h5>
               <form id="ruleform5" name="ruleform5" method="POST" action="/input5">
-              기준치 :
+              민감도 :
               <input type ="text"  id="range5" name="range5" value="" placeholder="<%=data_5.range005%>
               "/>
               <button id="std5">적용 </button>
             </div>
             </h5>
             <script>
-            var socket = io.connect("http://localhost:3000");
+            var socket = io.connect("http://52.78.82.199:80");
               //var dao = "<%=data_1.range001%>"
               socket.on('email5',function () {
                   socket.emit('standardData');
